<resources>
    <string name="app_name">Inventory App</string>
    <string name="app_name_mode_inventory">Inventory App (Inventory Mode)</string>
    <string name="app_name_mode_seller">Inventory App (Seller Mode)</string>
    <string name="action_settings">Settings</string>
    <string name="action_manager_supplier">Manager Supplier</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">Your Inventory is empty</string>

    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding itens in your inventory. Please click + to start include some itens :)</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>
    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>
    <string name="action_delete_confirmation">Are you sure that you want delete %1$S</string>

    <string name="email_body">Hello %1$S.\nCould you send more %2$S-%3$S\n\n Thanks !!!</string>

    <string name="msg_edit_qtde">the smaller quantity possible is 0</string>
    <string name="supplier_ui_name">Name:</string>
    <string name="supplier_ui_name_desc">Supplier Name</string>
    <string name="supplier_ui_mail">E-mail:</string>
    <string name="supplier_ui_mail_desc">Supplier contact e-mail</string>
    <string name="supplier_ui_phone">Phone:</string>
    <string name="supplier_ui_phone_desc">Supplier contact phone</string>
    <string name="supplier_ui_mobile">Mobile:</string>
    <string name="supplier_ui_mobile_desc">Supplier contact mobile</string>


    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg_supplier">Delete this Supplier?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_supplier_failed">Error with deleting supplier</string>
    <string name="editor_delete_supplier_successful">Supplier deleted</string>
    <string name="editor_save_supplier_successful">Supplier saved</string>
    <string name="editor_save_supplier_failed">Failed to save supplier</string>
    <string name="editor_save_product_successful">Product Saved</string>
    <string name="editor_save_product_failed">Failed to Save product</string>
    <string name="action_delete_all">Delete all</string>
    <string name="action_add_suplier">Include Dummy Supplier</string>

    <string name="currency">$ </string>
    <string name="quantity"> in stock</string>
    <string name="msg_sold_qtde">Don\'t have more products to sell</string>
    <string name="editor_delete_product_failed">Failed to delete product</string>
    <string name="editor_delete_product_successful">Product Deleted</string>
    <string name="action_suggest_confirmation">You don\' have supplier. Do you want generate one ?</string>
    <string name="generate">Generate</string>
    <string name="action_supplier_order">Supplier Order</string>
    <string name="ask_by_phone">call</string>
    <string name="ask_by_email">E-mail</string>
    <string name="description_add">Increase the quantity</string>
    <string name="qtde_initial_value">0</string>
    <string name="description_remove">decrease the quantity</string>
    <string name="label_quantity">Quantity:</string>
    <string name="price_initial_value">00.00</string>
    <string name="label_price">Price:</string>
    <string name="hint_supplier">supplier</string>
    <string name="label_supplier">Supplier:</string>
    <string name="prduct_hint">Product Name</string>
    <string name="label_name">Name:</string>
    <string name="product_code">Product Code</string>
    <string name="label_code">Code:</string>
    <string name="mode_inventory">Inventory Mode</string>
    <string name="sold_item_list">Sold item</string>
</resources>