<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_supplier"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kanjih.inventoryapp.SupplierActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:text="@string/supplier_ui_name"
            style="@style/LabelStyle" />
        <!-- Name field -->
        <EditText
            android:id="@+id/edit_supplier_name"
            android:hint="@string/supplier_ui_name_desc"
            android:inputType="textCapWords"
            style="@style/EditorFieldStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:text="@string/supplier_ui_mail"
            style="@style/LabelStyle" />
        <!-- Name field -->
        <EditText
            android:id="@+id/edit_supplier_email"
            android:hint="@string/supplier_ui_mail_desc"
            android:inputType="textEmailAddress"
            style="@style/EditorFieldStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:text="@string/supplier_ui_phone"
            style="@style/LabelStyle" />
        <!-- Name field -->
        <EditText
            android:id="@+id/edit_supplier_phone"
            android:hint="@string/supplier_ui_phone_desc"
            android:inputType="phone"
            style="@style/EditorFieldStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:text="@string/supplier_ui_mobile"
            style="@style/LabelStyle" />
        <!-- Name field -->
        <EditText
            android:id="@+id/edit_supplier_mobile"
            android:hint="@string/supplier_ui_mobile_desc"
            android:inputType="phone"
            style="@style/EditorFieldStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="horizontal">
        <ListView
            android:id="@+id/list_view_products"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>




</LinearLayout>
